class names update

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 </head>
 <body>
 
-  <main class="parent">
-    <div class="community">
+  <main class="container parent">
+    <div class="container__community community">
       <header>
         <h1>Join our community</h1>
       </header>
       <h2>30-day, hassle-free money back guarantee</h2>
       <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
     </div>
-    <div class="subscription">
+    <div class="container__subscription subscription">
       <header>
         <h2>Monthly Subscription</h2>
       </header>
-      <div class="pricing">
+      <div class="container__pricing pricing">
         <h1>$29</h1>
         <span>per month</span>
       </div>
       <p>Full access for less than $1 a day</p>
       <a class="subscription-btn" href="#">Sign Up</a>
     </div>
-    <div class="about">
+    <div class="container__about about">
       <header>
         <h2>Why Us</h2>
       </header>
@@ -50,7 +50,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 
-      Coded by <a href="#">Wardin</a>
+      Coded by <a href="#">Alexandru Ardelean</a>
     </p>
   </footer>
 </body>
