class names update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
         <h2>Monthly Subscription</h2>
       </header>
-      <div class="container__pricing pricing">
+      <div class="container__subscription__pricing pricing">
         <h1>$29</h1>
         <span>per month</span>
       </div>
