class names update

--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 <body>
 
   <main class="container parent">
-    <div class="container__community community">
+    <div class="container__community">
       <header>
         <h1>Join our community</h1>
       </header>
       <h2>30-day, hassle-free money back guarantee</h2>
       <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
     </div>
-    <div class="container__subscription subscription">
+    <div class="container__subscription">
       <header>
         <h2>Monthly Subscription</h2>
       </header>
-      <div class="container__subscription__pricing pricing">
+      <div class="container__subscription__pricing">
         <h1>$29</h1>
         <span>per month</span>
       </div>
       <p>Full access for less than $1 a day</p>
       <a class="subscription-btn" href="#">Sign Up</a>
     </div>
-    <div class="container__about about">
+    <div class="container__about">
       <header>
         <h2>Why Us</h2>
       </header>
