--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <main class="container parent">
+  <main class="container">
     <div class="container__community">
       <header>
         <h1>Join our community</h1>
